--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>Welcome to {{title}}!</h1>
+<app-nav-bar></app-nav-bar>
+<div style="margin-top: 140px;">
+    
+    <app-shop></app-shop>
+</div>
+
