--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -8,7 +8,7 @@
 
         <div class="btn-group mt-auto">
             <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-            <button type="button" class="btn btn-outline-secondary">View</button>
+            <button type="button" class="btn btn-outline-secondary" routerLink ="/shop/{{product.id}}" routerLinkActive="router-link-active" >View</button>
         </div>
 
     </div>
