--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,13 @@
+
 <app-nav-bar></app-nav-bar>
-<div style="margin-top: 140px;">
+<app-section-header></app-section-header>
+<div class="mt-5">
     
     <router-outlet></router-outlet>
 </div>
 
+<ngx-spinner>
+    <h3>
+        Loading ...
+    </h3>
+</ngx-spinner>
